@@ -21,12 +21,8 @@
 package net.sourceforge.atunes.kernel.controllers.playerControls;
 
 import java.awt.event.MouseAdapter;
-import java.awt.event.MouseEvent;
-
-import javax.swing.JSlider;
 
 import net.sourceforge.atunes.gui.views.panels.PlayerControlsPanel;
-import net.sourceforge.atunes.kernel.modules.player.PlayerHandler;
 
 /**
  * The listener interface for receiving playerControls events.
@@ -45,18 +41,5 @@ public final class PlayerControlsListener extends MouseAdapter {
      */
     protected PlayerControlsListener(PlayerControlsPanel panel, PlayerControlsController controller) {
         this.panel = panel;
-    }
-
-    @Override
-    public void mousePressed(final MouseEvent e) {
-        if (e.getSource().equals(panel.getProgressBar()) && panel.getProgressBar().isEnabled()) {
-            // Progress bar width is greater than real slider width so calculate value assuming 5 pixels in both left and right of track 
-            int value = (panel.getProgressBar().getMaximum() * (e.getX() - 5)) / (panel.getProgressBar().getWidth() - 10);
-            // Force new value to avoid jump to next major tick
-            panel.getProgressBar().setValue(value);
-            // Calculate percent
-            double perCent = (double) value / ((JSlider) e.getSource()).getMaximum();
-            PlayerHandler.getInstance().seekCurrentAudioObject(perCent);
-        }
     }
 }
